<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dash"
        android:title="@string/home"
        android:checkable="true"
        android:icon="@drawable/home"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/walid_profile"
        android:title="@string/w_profile"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/pending_assignments"
        android:title="@string/mou_pending_assign"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_assignment_turned_in_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/completed_assignments"
        android:title="@string/mou_completed_assign"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_assignment_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/mou_details"
        android:title="@string/t_talibe_details"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/talib_details"
        android:title="@string/mou_talibe_details"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/walid_rep"
        android:title="@string/walid_talibe_rep"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_data_thresholding_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_feedback_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/view_feedback"
        android:title="@string/view_feedback"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_feedback_24"
        app:iconTint="@color/colorDeepGreen"/>
    <item
        android:id="@+id/talib_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="LOGOUT"
        android:checkable="true"
        app:iconTint="@color/colorDeepGreen"/>
</menu>
