<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerLy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_10"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="Report"
            android:textColor="@color/colorWhite"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_12"
            android:orientation="vertical"
            tools:context=".activity.CompletedReportDetailsActivity">

            <LinearLayout
                android:id="@+id/pending_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:text="COMPLETED REPORT OF"
                    android:textColor="@color/color_13"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="ASSIGNMENTS"
                    android:textColor="@color/dark_green"
                    android:textSize="27sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_type_1"
                    android:padding="15dp"
                    android:text="Class 4 (Para-1)"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_type_6"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/student_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="Student Name : Sultan"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/assign_type_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="Assignment Type : Weekly"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/assign_desc_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/dummy_txt_3"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/assign_status_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="Status : COMPLETED"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/assign_date_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="Assign Date : 21-09-2021"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/submitted_date_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="Submission Date : 21-09-2021"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/submission_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/dummy_txt_3"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/remark_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/dummy_txt_2"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/report_comment_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/dummy_txt_4"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/maulim_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="Moulim : Abdul Gaffar"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>






